--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #efe6d5; 
-    font-family: "Papyrus", "Fantasy", cursive, serif;
+    font-family: "Luminari", "Fantasy", cursive, serif;
     text-align: center;
     margin: 0;
     padding: 0;
