--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #efe6d5; 
-    font-family: "Luminari", "Fantasy", cursive, serif;
+    font-family: "Papyrus", "Fantasy", cursive, serif;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -64,3 +64,14 @@ button:hover {
 .checkboxes label span {
   vertical-align: middle;
 }
+
+@font-face {
+  font-family: 'Papyrus'; 
+  src: url('fonts/Papyrus-Regular.woff2') format('woff2'),  
+       url('fonts/Papyrus-Regular.woff') format('woff'),    
+       url('fonts/Papyrus-Regular.ttf') format('truetype'); 
+  font-weight: normal;  
+  font-style: normal;   
+  font-display: swap;   
+}
+
