--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
     font-family: "Macondo", cursive;
     text-align: center;
     margin: 0;
-    padding: 0;
-    font-weight: 700;         
-    font-size: 1.0em;
+    padding: 20px;
+    font-weight: 550;         
+    font-size: 1.1em;
 }
 
 h2, h3 {
